Feedback on page layouts done

--- a/views/login/add.ejs
+++ b/views/login/add.ejs
@@ -8,13 +8,13 @@
         </div>
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option1" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option one" size="1" class="form-control">
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option2" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option two" size="1" class="form-control">
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option3" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option three" size="1" class="form-control">
       </li>
       <li class="list-group-item list-group-item-info">
         <input type="text" name="answer" name="options" placeholder="answer" size="1" class="form-control">
