--- a/views/login/create.ejs
+++ b/views/login/create.ejs
@@ -1,7 +1,7 @@
 <div class="col">
     <form id="new" class="form my-1 p-4">
       <h2>Enter Information</h2>
-      <ul class="list-group ">
+      <ul class="list-group " style = "width: 400px;">
         <li class="list-group-item list-group-item-info rounded mb-1">
           <input type="text" id="user_id" name="user_id" placeholder="username" size="1" class="form-control col form-control-lg">
         </li>
@@ -11,7 +11,7 @@
         <li class="list-group-item list-group-item-info rounded mb-1">
           <input type="text" id="last_name" name="last_name" placeholder="last name" size="1" class="form-control  col form-control-lg">
         </li>
-      <div class="text-center mt-2">
+      <div class="text-left mt-2">
         <button id = "new" class="btn btn-sm btn-info m-1">new user</button>
       </div>
     </form>
