--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,12 +1,17 @@
 <div class="col">
   <form id="<%- name -%>" class="login-form">
-    <h2 class="text-center">Enter Your Username</h2>
-    <ul class="list-group">
+    <h2 class="text-left">Enter Your Username</h2>
+    <ul class="list-group" style = "width: 400px;">
       <li class="list-group-item list-group-item-info">
-        <input type="text" id="user_id" placeholder="user_id" value="<%- name -%>" class="form-control">
+        <input type="text"
+                id="user_id"
+                placeholder="user_id"
+                value="<%- name -%>"
+                class="form-control">
+
       </li>
     </ul>
-    <div class="text-center mt-2">
+    <div class="text-left mt-2">
         <button id = "login-submit" class="btn btn-sm btn-info m-1">Login</button>
     </div>
   </form>
