--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,5 +1,6 @@
-<div class="col">
+<div class="col-flex  p-5 border">
   <form id="<%- name -%>" class="login-form">
+    <h1>Existing User?</h1>
     <h2 class="text-left">Enter Your Username</h2>
     <ul class="list-group" style = "width: 400px;">
       <li class="list-group-item list-group-item-info">
