--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -6,9 +6,11 @@
 
       <div class="form-row">
         <label for="question">Question</label>
-        <input id="question" type="text" name="question" placeholder="Question" value="<%= aQuestion.question -%>"  class="form-control form-control-lg font-weight-bold mb-1">
+        <input id="question" type="text" name="question" placeholder="Question"
+        value="<%= aQuestion.question -%>"  class="form-control form-control-lg font-weight-bold mb-1">
         <label for="user_id">User Id</label>
-        <input id="user_id" type="text" name="user_id" placeholder="User Id" value="<%= aQuestion.user_id -%>" class="form-control form-control-lg font-weight-bold mb-1">
+        <input id="user_id" type="text" name="user_id" placeholder="User Id"
+        value="<%= aQuestion.user_id -%>" class="form-control form-control-lg font-weight-bold mb-1">
       </div>
       <label for="options">Options</label>
       <%_ for (const option of aQuestion.options) {-%>
@@ -16,7 +18,7 @@
               type="text"
               name="options"
               placeholder="option"
-              value="<%- option -%>"
+              value="<%- option -%> "
               class="form-control form-control-lg font-weight-bold mb-1"
           >
       <%_ } -%>
