require inputs and have maximum length for inputs, delete unused files

--- a/views/login/add.ejs
+++ b/views/login/add.ejs
@@ -4,20 +4,25 @@
     <ul class="list-group">
       <li class="list-group-item list-group-item-info">
         <div class="form-row">
-          <input type="text" name="question" placeholder="Question" size="1" class="form-control col mr-2 form-control-lg">
+          <input type="text" name="question" placeholder="Question" size="1"
+           class="form-control col mr-2 form-control-lg" maxlength="60">
         </div>
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option one" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option one" size="1"
+        class="form-control"  maxlength="40">
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option two" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option two" size="1"
+        class="form-control"  maxlength="40">
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="options" placeholder="option three" size="1" class="form-control">
+        <input type="text" name="options" placeholder="option three" size="1"
+        class="form-control" maxlength="40">
       </li>
       <li class="list-group-item list-group-item-info">
-        <input type="text" name="answer" name="options" placeholder="answer" size="1" class="form-control">
+        <input type="text" name="answer" name="options" placeholder="answer" size="1"
+        class="form-control" maxlength="40">
       </li>
     </ul>
     <div class="text-center mt-2">
@@ -25,4 +30,3 @@
     </div>
   </form>
 </div>
-  
