--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -8,7 +8,8 @@
                 id="user_id"
                 placeholder="user_id"
                 value="<%- name -%>"
-                class="form-control">
+                class="form-control"
+                 maxlength="20">
 
       </li>
     </ul>
