Polished app with better error handling

--- a/views/login/add.ejs
+++ b/views/login/add.ejs
@@ -1,4 +1,4 @@
-<div class="col-4">
+<div class="col-4 mr-3">
   <form id="<%= name -%>" class="create">
     <h2 class="text-center">Enter a Question</h2>
     <ul class="list-group">
@@ -26,7 +26,7 @@
       </li>
     </ul>
     <div class="text-center mt-2">
-        <button id = "create" class="btn btn-sm btn-info m-1">Submit question</button>
+        <button id="create" class="btn btn-sm btn-info m-1">Submit question</button>
     </div>
   </form>
 </div>
