--- a/views/login/create.ejs
+++ b/views/login/create.ejs
@@ -1,4 +1,4 @@
-<div class="col-flex p-3 border">
+<div class="text-center col p-3">
   <form id="new" class="form my-1 p-4 ">
     <%_ if(name === 'DOES_NOT_EXIST'){-%>
         <h1 class = "text-danger">Invalid Username please make an account</h1>
@@ -6,21 +6,24 @@
         <h1>New User?</h1>
         <%_ } -%>
     <h2>Enter Information</h2>
-    <ul class="list-group " style = "width: 400px;">
-      <li class="list-group-item list-group-item-info rounded mb-1">
-        <input type="text" id="user_id" name="user_id"
-        placeholder="username" size="1" class="form-control col form-control-lg"  maxlength="20">
-      </li>
-      <li class="list-group-item list-group-item-info rounded mb-1">
-        <input type="text" id="first_name" name="first_name"
-        placeholder="first name" size="1" class="form-control col form-control-lg"  maxlength="20">
-      </li>
-      <li class="list-group-item list-group-item-info rounded mb-1">
-        <input type="text" id="last_name" name="last_name"
-        placeholder="last name" size="1" class="form-control  col form-control-lg"  maxlength="20">
-      </li>
-    <div class="text-left mt-2">
-      <button id = "new" class="btn btn-sm btn-info m-1">new user</button>
+    <div class="d-flex flex-column">
+      <ul class="list-inline mx-auto justify-content-center" style = "width: 400px;">
+        <li class="p-3 rounded list-group-item list-group-item-info mb-1">
+          <input type="text" id="user_id" name="user_id"
+          placeholder="username" size="1" class="form-control col form-control-lg"  maxlength="20">
+        </li>
+        <li class="p-3 rounded list-group-item list-group-item-info mb-1">
+          <input type="text" id="first_name" name="first_name"
+          placeholder="first name" size="1" class="form-control col form-control-lg"  maxlength="20">
+        </li>
+        <li class="p-3 rounded list-group-item list-group-item-info mb-1">
+          <input type="text" id="last_name" name="last_name"
+          placeholder="last name" size="1" class="form-control  col form-control-lg"  maxlength="20">
+        </li>
+      </ul>
+    </div>
+    <div class="mt-2">
+      <button id="new" class="btn btn-sm btn-info m-1">new user</button>
     </div>
   </form>
 </div>
