--- a/views/login/scripts.ejs
+++ b/views/login/scripts.ejs
@@ -9,10 +9,12 @@ $('.login-form').on('submit', function(event) {
   $.ajax({method: 'get', url: `/users`})
     .done((users) => {
       if (users.includes(user_id)) {
+        console.log('user exists');
         $.ajax({method: 'get', url: `/login/?user_id=${user_id}`})
           .done(() => location = location)
           .fail(error => alert(error.responseText));
       } else {
+        console.log('user does not exist');
         $.ajax({method: 'get', url: `/users/create-user`})
           .done(() => location = location)
           .fail(error => alert(error.responseText));
@@ -26,9 +28,10 @@ $('.login-form').on('submit', function(event) {
 $('.update').on('submit', function(event) {
   const form = $(this);
   const question_id = form.attr('id');
+  const user_id = form.attr('name');
   $('[id^=input-]').removeClass('bg-dark text-light');
   event.preventDefault();
-  $.ajax({method: 'put', url: `/questions/${question_id}`, data: form.serialize()})
+  $.ajax({method: 'put', url: `/questions/${question_id}?user_id=${user_id}`, data: form.serialize()})
     .fail(error => alert(error.responseText));
     Location=location;
 });
@@ -51,12 +54,11 @@ $('.create').on('submit', function(event) {
 
 // delete a question
 $(document).on('click', '.delete', function(event) {
-  console.log('in delete');
   const form = $(this).closest('form');
-  const question_id = form.attr('id')
+  const question_id = form.attr('id');
+  const user_id = form.attr('name');
   event.preventDefault();
-  console.log(question_id);
-  $.ajax({method: 'delete', url: `/questions/${question_id}`})
+  $.ajax({method: 'delete', url: `/questions/${question_id}?user_id=${user_id}`})
     .done(() => {
       form.remove();
     })
@@ -68,14 +70,24 @@ $(document).on('click', '.delete', function(event) {
  $(document).ready(function(){
   $("#new").on('submit', function() {
     const form = $(this).closest('form');
-    const user_id = form.find('#user_id');
+    const user_id = form.find('#user_id').val();
     event.preventDefault();
-    $.ajax({method: 'post', url: '/users', data: form.serialize()})
-      .done(() => {
-        $.ajax({method: 'get', url: `/login/?user_id=${user_id}`})
-        location = location;
-      })
-      .fail(error => alert(error.responseText));
+    $.ajax({method: 'get', url: `/users`})
+    .done((users) => {
+      if (users.includes(user_id)) {
+        const url = `/permissions/user_already_exists/${user_id}`;
+        $.ajax({method: 'get', url: url})
+        .done(() => location = url)
+      } else  {
+        console.log("user doesn't exist");
+        $.ajax({method: 'post', url: '/users', data: form.serialize()})
+          .done(() => {
+            $.ajax({method: 'get', url: `/login/?user_id=${user_id}`})
+            .done(() => location = `/questions/user/${user_id}`)
+          })
+          .fail(error => alert(error.responseText))
+      }
+    })
   });
 });
 
