Makes fields required

--- a/views/login/add.ejs
+++ b/views/login/add.ejs
@@ -5,24 +5,24 @@
       <li class="list-group-item list-group-item-info">
         <div class="form-row">
           <input type="text" name="question" placeholder="Question" size="1"
-           class="form-control col mr-2 form-control-lg" maxlength="60">
+           class="form-control col mr-2 form-control-lg" maxlength="60" required>
         </div>
       </li>
       <li class="list-group-item list-group-item-info">
         <input type="text" name="options" placeholder="option one" size="1"
-        class="form-control"  maxlength="40">
+        class="form-control"  maxlength="40" required>
       </li>
       <li class="list-group-item list-group-item-info">
         <input type="text" name="options" placeholder="option two" size="1"
-        class="form-control"  maxlength="40">
+        class="form-control"  maxlength="40" required>
       </li>
       <li class="list-group-item list-group-item-info">
         <input type="text" name="options" placeholder="option three" size="1"
-        class="form-control" maxlength="40">
+        class="form-control" maxlength="40" required>
       </li>
       <li class="list-group-item list-group-item-info">
         <input type="text" name="answer" name="options" placeholder="answer" size="1"
-        class="form-control" maxlength="40">
+        class="form-control" maxlength="40" required>
       </li>
     </ul>
     <div class="text-center mt-2">
