--- a/views/login/create.ejs
+++ b/views/login/create.ejs
@@ -10,15 +10,15 @@
       <ul class="list-inline mx-auto justify-content-center" style = "width: 400px;">
         <li class="p-3 rounded list-group-item list-group-item-info mb-1">
           <input type="text" id="user_id" name="user_id"
-          placeholder="username" size="1" class="form-control col form-control-lg"  maxlength="20">
+          placeholder="username" size="1" class="form-control col form-control-lg"  maxlength="20" required>
         </li>
         <li class="p-3 rounded list-group-item list-group-item-info mb-1">
           <input type="text" id="first_name" name="first_name"
-          placeholder="first name" size="1" class="form-control col form-control-lg"  maxlength="20">
+          placeholder="first name" size="1" class="form-control col form-control-lg"  maxlength="20" required>
         </li>
         <li class="p-3 rounded list-group-item list-group-item-info mb-1">
           <input type="text" id="last_name" name="last_name"
-          placeholder="last name" size="1" class="form-control  col form-control-lg"  maxlength="20">
+          placeholder="last name" size="1" class="form-control  col form-control-lg"  maxlength="20" required>
         </li>
       </ul>
     </div>
