--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -9,9 +9,10 @@
             type="text"
             id="user_id"
             placeholder="user_id"
-            value="<%- name -%>"
             class="form-control"
-            maxlength="20">
+            maxlength="20"
+            required
+          >
         </li>
       </ul>
     </div>
